--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  background-color: peachpuff;
 }
 
 input {
@@ -21,6 +22,7 @@ input:focus {
 
 button {
   height: inherit;
+  border: 0;
   line-height: 40px;
   padding: 0 14px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
@@ -40,6 +42,11 @@ button:focus {
 button:hover {
   transform: translateY(-1px);
   box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+}
+
+button:active {
+  transform: translateY(1px);
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .look {
